--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="profile">profile</string>
     <string name="post">post</string>
     <string name="explore">explore</string>
+    <string name="new_post">New post</string>
 </resources>
